added more hashtags to the demo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div>Example custom behavior (matches hashtags that contain with the phrase)</div>
 		<textarea id="custom"></textarea>
 		<script>
-			var suggestions = ["apple", "banana", "animal"];
+			var suggestions = ["#ausurpadora105", "#rapvideos", "#haveyouheard", "#walangpasok", "#imonlycoolbecause", "#weekendcountdown", "#hitbound", "#see", "#mtvhits", "#cfpics", "#dienachrichten", "#hergecebusaatlerde", "#cumple17", "#hablemosdepaz", "#bmaxquiz", "#escuchar", "#lifedtla", "#livelunch", "#5soswithmikeandike", "#claveparismobile", "#newswire", "#lobomarley", "#jucutuma", "#997summersplash", "#dialogabrasil", "#ashleyyes", "#toppop", "#thefive", "#escualquieracuando", "#rdargentina", "#dfn", "#top3onvevo", "#leamakhoul", "#anittanaradiotang", "#givemesunlight", "#arianagrande", "#chambacomunitaria", "#mqmresignations", "#intimy", "#hoa231"];
 			$("#default").hashtagHelper(suggestions);
 			$("#custom").hashtagHelper(suggestions, function(hashtag, candidates){
 				var matches = [];
